This is just to motivate myself to improve a little bit every day :)

Best: 23

15-04-2024
Streak: 23
Learned:
    -Read about localising ordinal numbers with plural strings,
        most likely need to use MessageFormat but need to read more about how it works
        and whether it is available in compose multiplatform
Did:

14-04-2024
Streak: 22
Learned:
Did:
    -Ensure SeasonInfo is populated with correct info,
        using inaccurate calculation of Solstices & Equinoxes
    -Clean up logic for making days tick over at 4am instead of midnight
    -Make CalendarState directly accessible to main menu, change background and title based on
        seasonal information.
    -Fix coroutine wake-up logic
    -Add strings for seasons
    -Add Composeable resource functions for seasons
    -Reorganise backlog into directory with separate files
        (this will also let me save notes I'm done with)

13-04-2024
Streak: 21
Learned:
    - Read about Solar Seasons.
Did:
    -Add strings for equinoxes, solstices, and seasonal festivals
    -Rewrite CalendarFragment to use a CalendarState data class, instead of only emitting DayOfWeek
    -Group SeasonInfo as separate data class within CalendarState data class

12-04-2024
Streak: 20
Learned:
Did:
    - Fix, clean up and test Calendar ViewModel and Repository
        but still need to remove CalendarFragment

11-04-2024
Streak: 19
Learned:
Did:
    - Rework getTodayWithOffset to be more configurable, change name as 'today with offset'
        sounds more confusing than clearly pointing out it is a wacky situational implementation.
    - Work on CalendarComponent (VM, Repo, Fragment) to implement coroutine that only checks if
        day has been updated when it needs to. (Messy WIP)

10-04-2024
Streak: 18
Learned:
    - Workshop on coroutines
Did:
    - Hacky implementation that temporarily uses CalendarFragment as a UI component
        (needs to change) as title for main menu